[package]
name = "rustcore"
version = "0.1.0"
edition = "2024"

[features]
default = ["secp256k1"]
secp256k1 = []
# Future crypto backends can be added here
# ed25519 = []
# rsa = []

[dependencies]
"blake3" = "=1.8.2"
ecdsa = { version = "0.16.9", features = ["signing", "verifying"] }
hex = "0.4.3"
k256 = { version = "0.13.4" }
rand = "0.8"
uint = "0.10.0"
uuid = { version = "1.17.0", features = ["v4"] }

[[example]]
name = "transaction_validation"
path = "examples/transaction_validation.rs"

[[example]]
name = "hasher_demo"
path = "examples/hasher_demo.rs"
